--- a/apps/task1-login/src/Login.module.css
+++ b/apps/task1-login/src/Login.module.css
@@ -420,3 +420,45 @@
     transform: translateY(2px);
     /* Vertical adjustment */
 }
+/* --- Mobile Optimization --- */
+@media screen and (max-width: 480px) {
+    .container {
+        padding-bottom: 20px;
+    }
+
+    .headerStrip {
+        height: 250px;
+    }
+
+    .loginCard {
+        width: 92%;
+        margin-top: -120px;
+        padding: 25px 20px 30px 20px;
+    }
+
+    .logo {
+        width: 70px;
+    }
+
+    .title {
+        font-size: 26px;
+    }
+
+    .treeImage {
+        max-width: 280px;
+    }
+
+    .socialText {
+        font-size: 11px;
+        padding-right: 10px;
+    }
+
+    .socialBtn {
+        height: 44px;
+    }
+
+    .socialIconContainer {
+        width: 36px;
+        height: 36px;
+    }
+}
