--- a/apps/task2-posts/src/pages/PostList.module.css
+++ b/apps/task2-posts/src/pages/PostList.module.css
@@ -96,10 +96,13 @@
     font-size: 1rem;
     margin-top: var(--spacing-2);
     /* margin-top: 1rem; */
+    margin-left: auto;
+    margin-right: auto;
     max-width: 600px;
     opacity: 0.6;
     line-height: 1.4;
     text-transform: none;
+    text-align: center;
     /* Keep body text normal case for readability contrast */
 }
 
