--- a/apps/task2-posts/src/brutalist-vars.css
+++ b/apps/task2-posts/src/brutalist-vars.css
@@ -15,6 +15,7 @@
     --border-color: #000000;
     --border-radius: 0px;
     /* STRICT 0px */
+    --container-width: 1000px;
 
     /* SPACING */
     --spacing-1: 8px;
