--- a/apps/task2-posts/src/pages/PostList.module.css
+++ b/apps/task2-posts/src/pages/PostList.module.css
@@ -78,16 +78,20 @@
     color: var(--color-text);
     margin-bottom: var(--spacing-1);
     opacity: 0.7;
+    text-align: center;
 }
 
 .title {
     font-size: 3rem;
     line-height: 0.95;
-    margin: 0;
+    margin: 0 auto;
+    /* Center block */
     color: var(--color-text);
     text-transform: uppercase;
     font-weight: 700;
     max-width: 90%;
+    text-align: center;
+    /* Center text */
 }
 
 .description {
